# cpp-playground

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: align.hpp.01DE07A0A8533EB4.idx  bench.cpp.A251794B4A91EA12.idx  free_list.hpp.F59C76787F51065F.idx
lock_free/: CMakeLists.txt  README.md  align.hpp  bench.cpp  free_list.hpp  lock_free_stack.hpp  plot_bench.py  plot_scaling.py
lock_free/tests/: free_list_test.cpp  stack_test.cpp
simd/: CMakeLists.txt  README.md  plot_bench.py  simd_bench.cpp
